--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "game-of-life",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jakubmarkiewicz.github.io/Conway-s-Game-of-Life/",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
@@ -11,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
