--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-of-life",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jakubmarkiewicz.github.io/Conway-s-Game-of-Life/",
+  "homepage": "https://jakubmarkiewicz.github.io/conway-game-of-life",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.3.2",
