--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "game-of-life",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jakubmarkiewicz.github.io/conway-game-of-life",
   "dependencies": {
+    "@storybook/addon-options": "^3.4.4",
     "gh-pages": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -14,6 +14,16 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^3.4.4",
+    "@storybook/addon-links": "^3.4.4",
+    "@storybook/addons": "^3.4.4",
+    "@storybook/react": "^3.4.4",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0"
   }
 }
