--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@storybook/addon-links": "^3.4.4",
     "@storybook/addons": "^3.4.4",
     "@storybook/react": "^3.4.4",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0"
+    "babel-preset-flow": "^6.23.0",
+    "babel-runtime": "^6.26.0",
+    "flow-bin": "^0.72.0"
   }
 }
