Fix flow path issue

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,12 +1,11 @@
 [ignore]
-
+node_modules/
 [include]
 
 [libs]
-./src/lib/
+
 [lints]
 
 [options]
-module.name_mapper='^~/\(.*\)$' -> '<PROJECT_ROOT>/\1'
-suppress_comment= \\(.\\|\n\\)*\\$ExpectFlowError
+module.system=haste
 [strict]
