--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@storybook/addon-options": "^3.4.4",
     "clipboard-copy": "^2.0.0",
     "gh-pages": "^1.1.0",
+    "html-react-parser": "^0.4.6",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
