--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-options": "^3.4.4",
+    "@storybook/addon-options": "3.4.5",
     "clipboard-copy": "^2.0.0",
-    "gh-pages": "^1.1.0",
+    "flow-typed": "^2.4.0",
     "html-react-parser": "^0.4.6",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -18,17 +18,17 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.4",
-    "@storybook/addon-links": "^3.4.4",
-    "@storybook/addons": "^3.4.4",
-    "@storybook/react": "^3.4.4",
+    "@storybook/addon-actions": "3.4.5",
+    "@storybook/addon-links": "3.4.5",
+    "@storybook/addons": "3.4.5",
+    "@storybook/react": "3.4.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-flow": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-flowtype": "^2.47.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
